--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ install:
     - sudo -H easy_install pip
     - sudo -H pip install -I ansible==2.3.2.0
     - mkdir -p /tmp/roles
-    - "{ echo '[defaults]'; echo 'roles_path = ../:/tmp/roles'; } >> ansible.cfg"
+    - "{ echo '[defaults]'; echo 'roles_path = ../:/tmp/roles'; echo 'hash_behaviour=merge'; } >> ansible.cfg"
     - mkdir -p /tmp/.macos-bootstrap/
-    - "{ echo 'secret_param: true'; echo 'username: \"foo\"'; echo 'hash_behaviour=merge'; } >> /tmp/.macos-bootstrap/secrets.yml"
+    - "{ echo 'secret_param: true'; echo 'username: \"foo\"'; } >> /tmp/.macos-bootstrap/secrets.yml"
 
 script:
   - "ansible-playbook -i tests/inventory tests/travis.yml --syntax-check"
