--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,4 +9,12 @@ galaxy_info:
     versions:
     - all
   galaxy_tags: ["ansible", "vars", "helper", "util"]
-dependencies: []
+dependencies:
+  - { role: feffi.macos-homebrew,
+      macos_homebrew: {
+        packages: [
+          { name: "python" }
+        ],
+        taps: []
+      }
+    }
