--- a/tasks/dependencies.yml
+++ b/tasks/dependencies.yml
@@ -1,4 +1,8 @@
 ---
+- name: Update pip (and fix potential pip errors)
+  become: true
+  shell: python -m pip install --upgrade --force pip
+
 - name: Run pip to install dependencies
   pip:
     name: "{{ item }}"
