--- a/tests/requirements.yml
+++ b/tests/requirements.yml
@@ -1,2 +1,3 @@
 ---
-- { src: https://github.com/feffi/ansible-macos-homebrew.git, name: feffi.macos-homebrew }
+- src: https://github.com/feffi/ansible-macos-homebrew.git
+  name: feffi.macos-homebrew
