--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,7 +8,11 @@ galaxy_info:
   - name: EL
     versions:
     - all
-  galaxy_tags: ["ansible", "vars", "helper", "util"]
+  galaxy_tags:
+    - ansible
+    - vars
+    - helper
+    - util
 dependencies:
   - { role: feffi.macos-homebrew,
       macos_homebrew: {
