--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-include_vars:
+macos_include_vars:
   # List of local paths to search for YAML files that will be included as Ansible vars.
   paths:
     - "{{ inventory_dir }}/.macos-boostrap"
