--- a/tests/requirements.yml
+++ b/tests/requirements.yml
@@ -1,3 +1,5 @@
 ---
 - src: https://github.com/feffi/ansible-macos-homebrew.git
   name: feffi.macos-homebrew
+- src: https://github.com/feffi/ansible-macos-pip.git
+  name: feffi.macos-pip
