--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   author: Kevin Wennemuth
-  description: Includes custom YAML files from configured path(s).
+  description: Ansible role to include custom YAML files from configured path(s).
   license: MIT
   min_ansible_version: 2.3
   platforms:
