--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,4 +3,4 @@
     msg: "{{ vars[(role_path | basename).split('.')[-1].replace('-','_').replace('ansible_','')] }}"
   when: DEBUG | d() | bool
 
-- include: include-files.yml
+- include: configure.yml
