--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -2,7 +2,7 @@
 - name: Checking if directory exists
   stat:
     path: "{{ item }}"
-  with_items: "{{ macos_include_vars.paths }}"
+  with_items: "{{ macos_include_vars.paths | default([]) }}"
   register: macos_include_vars_dir
   loop_control:
     label: "{{ item }}"
