--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@
 macos_include_vars:
   # List of local paths to search for YAML files that will be included as Ansible vars.
   paths:
-    - "{{ inventory_dir }}/.macos-boostrap"
+    - "{{ inventory_dir }}/.macos-bootstrap"
   # Extension of files to include.
   extensions:
     - "yml"
