--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,8 +11,7 @@ galaxy_info:
   galaxy_tags:
     - ansible
     - vars
-    - osx
-    - macos
+    - meta
     - helper
     - util
     - import
