--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -3,17 +3,20 @@
   stat:
     path: "{{ item }}"
     follow: true
-  with_items: "{{ include_vars.paths }}"
+  with_items: "{{ ansible_include_vars.paths }}"
   register: include_vars_dir
   loop_control:
     label: "{{ item }}"
 
-- name: "Include all {{ include_vars.extensions | map('regex_replace', '(.*)', '*.\\1') | join(',') }} files"
+- debug:
+    var: include_vars_dir
+  when: DEBUG | d() | bool
+
+- name: "Include all {{ ansible_include_vars.extensions | map('regex_replace', '(.*)', '*.\\1') | join(',') }} files"
   include_vars:
     dir: "{{ item.item }}"
-    depth: "{{ include_vars.depth }}"
-    extensions: "{{ include_vars.extensions }}"
-    ignore_files: "{{ include_vars.excludes }}"
+    extensions: "{{ ansible_include_vars.extensions }}"
+    ignore_files: "{{ ansible_include_vars.excludes }}"
   with_items: "{{ include_vars_dir.results }}"
   when: item.stat.exists
   register: included
