--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - debug:
-    msg: "{{ vars[(role_path | basename).split('.')[-1].replace('-','_').replace('ansible_','')] }}"
+    msg: "{{ vars[(role_path | basename).split('.')[-1].replace('-','_')] }}"
   when: DEBUG | d() | bool
 
 - include_tasks: configure.yml
